welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (estFaceMur() && getDirection()==Direction.EAST) {
               ^